# open-engine-sim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
dependencies/submodules/: CMakeLists.txt
src/: synthesizer.cpp
test/: synthesizer_tests.cpp
